# Angle_Pilot

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  angle-calculator.dockerfile  code-of-conduct.md  cone-detector.dockerfile  consumer.dockerfile  docker-compose.yml  docker-stack.yml  ervice logs project_OpenDLV-Vehicle-View  producer.dockerfile
.gitlab/issue_templates/: Bug.md  Task.md
.gitlab/merge_request_templates/: Bugfix.md  Feature.md  Task.md
api/: position.hpp
deploy/scripts/: angle-calculator-verbose.sh  angle-calculator.sh  cone-detector-verbose.sh  cone-detector.sh  decoder.sh  setup.sh  vehicle-view.sh
example/: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  PrimeChecker.cpp  PrimeChecker.hpp  TestPrimeChecker.cpp  helloworld.cpp
mem-share/: CMakeLists.txt  build.sh  mem1.cpp  mem1.dockerfile  mem2.cpp  mem2.dockerfile  mem3.cpp  mem3.dockerfile  spacetime.hpp
src/: template-opencv.cpp
src/angle-calculator/: CMakeLists.txt  angle-calculator.cpp  angle-validator.cpp  angle-validator.hpp  build.sh
src/api/: CMakeLists.txt  consumer.cpp  position.cpp  position.hpp  producer.cpp
src/cone-detection/: CMakeLists.txt  cone-detector.cpp  template-opencv.cpp
src/prototypes/: CMakeLists.txt  consumer.cpp  consumer.dockerfile  producer.cpp  producer.dockerfile
